<resources>
    <string name="app_name">Baristoteles</string>
    <string name="action_settings">Settings</string>
    <string name="close_the_dialog">Close the dialog</string>
    <string name="next_button">Next</string>
    <string name="done_button">Done</string>
    <string name="grind">Grind:</string>
    <string name="name">Name:</string>
    <string name="notes">Notes:</string>
    <string name="rating">Rating:</string>
    <string name="time">Time:</string>
    <string name="weight">Weight:</string>
    <string name="weight_out">Weight Out:</string>
    <string name="temperature">Temperature</string>
    <string name="save_button">Save</string>
    <string name="upgrade_invert">Thanks for the upgrade ! The order of entries is now inverted.</string>
    <string name="settings">Settings</string>
    <string name="settings_switch_help">Enable/Disable steps of the Add-Dialog</string>
</resources>
