<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    app:cardBackgroundColor="@color/darkgray"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="true"
    android:layout_gravity="center_horizontal"
    android:keepScreenOn="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/settings"
            android:textAlignment="center"
            app:autoSizeTextType="uniform" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_switch_help"
                android:textAlignment="center"/>

            <Switch
                android:id="@+id/grindSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:theme="@style/SettingsSwitch"
                android:text="@string/grind" />

            <Switch
                android:id="@+id/weightSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:theme="@style/SettingsSwitch"
                android:text="@string/weight" />

            <Switch
                android:id="@+id/temperatureSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:theme="@style/SettingsSwitch"
                android:text="@string/temperature" />

            <Switch
                android:id="@+id/timeSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:theme="@style/SettingsSwitch"
                android:text="@string/time" />

            <Switch
                android:id="@+id/outweightSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:theme="@style/SettingsSwitch"
                android:text="@string/weight_out" />

            <Switch
                android:id="@+id/notesSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:theme="@style/SettingsSwitch"
                android:text="@string/notes" />

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>